Fixed color contrast issues in Emiglio theme

--- a/themes/emiglio/css/sass/_base.scss
+++ b/themes/emiglio/css/sass/_base.scss
@@ -6,7 +6,7 @@
 // Colors
 
 $gray: #ddd;
-$yellow: #A49D4C;
+$yellow: #695237;
 $red: #843418;
 
 // Typography
