--- a/themes/emiglio/css/sass/_screen.scss
+++ b/themes/emiglio/css/sass/_screen.scss
@@ -40,7 +40,7 @@ h2 {
     line-height: 2 * $base-line-height;
     @include trailer(1, 1.75 * $base-font-size);
     font-weight: bold;
-    color: #9e9e9e;
+    color: #515151;
 }
 
 
@@ -792,7 +792,7 @@ footer {
 .featured,
 #featured-exhibit {
     overflow: hidden;
-    background: #7B8D78;
+    background: #3a5341;
     color: #fff;
     padding: rhythm() rhythm() 0;
     border-color: #4F584D;
