--- a/themes/emiglio/css/style.css
+++ b/themes/emiglio/css/style.css
@@ -99,7 +99,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
     line-height: 42px;
     margin-bottom: 0.85714em;
     font-weight: bold;
-    color: #9e9e9e;
+    color: #515151;
   }
 
   h3 {
@@ -170,15 +170,15 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   }
 
   a:visited {
-    color: #a49d4c;
+    color: #695237;
   }
 
   a:hover {
-    color: #7B8D78;
+    color: #4f5a4d;
   }
 
   a:active {
-    color: #7B8D78;
+    color: #4f5a4d;
   }
 
   h1 a,
@@ -240,7 +240,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
     font-family: "Lato", sans-serif;
     font-size: 14px;
     line-height: 21px;
-    background-color: #a49d4c;
+    background-color: #695237;
     color: #fff;
     border: 0;
     padding: 0.375em;
@@ -396,7 +396,8 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 
   .pagination_next,
   .pagination_previous {
-    background-color: #a49d4c;
+    background-color: #695237;
+    color: #ffffff;
     font-size: 14px;
     padding: 0 10px;
     position: relative;
@@ -844,7 +845,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   .featured,
   #featured-exhibit {
     overflow: hidden;
-    background: #7B8D78;
+    background: #3a5341;
     color: #fff;
     padding: 1.5em 1.5em 0;
     border-color: #4F584D;
@@ -933,7 +934,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
     padding: 0.75em;
     text-align: center;
     color: #fff;
-    background: #a49d4c;
+    background-color: #695237;
     border-width: 0 1px 1px 0;
   }
   .items-nav a:hover,
@@ -1170,7 +1171,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
     display: block;
     padding: 0.75em;
     color: #fff;
-    background: #a49d4c;
+    background-color: #695237;
     border-width: 0 1px 1px 0;
   }
   #exhibit-pages ul a:hover {
